add link to source

--- a/pdf-slide-viewer/position-absolute-image-map/index.html
+++ b/pdf-slide-viewer/position-absolute-image-map/index.html
@@ -26,6 +26,12 @@
   </head>
   <body>
     <h1>Image Map with “position: absolute”</h1>
+    <p>
+      <a
+        href="https://github.com/honai/demos/blob/main/pdf-slide-viewer/position-absolute-image-map/index.html"
+        >Source</a
+      >
+    </p>
     <div class="slide">
       <img
         src="../slide-carousel/slide-2.jpg"
