--- a/pdf-slide-viewer/scroll-snap/index.html
+++ b/pdf-slide-viewer/scroll-snap/index.html
@@ -33,7 +33,12 @@
   </head>
   <body>
     <h1>CSS Scroll Snap Demo</h1>
-    <a href="https://github.com/honai/demos/">Source</a>
+    <p>
+      <a
+        href="https://github.com/honai/demos/blob/main/pdf-slide-viewer/scroll-snap/index.html"
+        >Source</a
+      >
+    </p>
     <div class="carousel">
       <img src="./carousel-1.png" alt="Page 1" />
       <img src="./carousel-2.png" alt="Page 2" />
