--- a/pdf-slide-viewer/slide-carousel/index.html
+++ b/pdf-slide-viewer/slide-carousel/index.html
@@ -48,6 +48,12 @@
   </head>
   <body>
     <h1>Slide Carousel</h1>
+    <p>
+      <a
+        href="https://github.com/honai/demos/blob/main/pdf-slide-viewer/slide-carousel/index.html"
+        >Source</a
+      >
+    </p>
     <div class="carousel">
       <div class="slide">
         <img
