--- a/pdf-slide-viewer/scroll-snap/index.html
+++ b/pdf-slide-viewer/scroll-snap/index.html
@@ -19,15 +19,20 @@
         flex-flow: row nowrap;
         gap: var(--gap);
       }
-      .carousel > img {
+      .carousel > .slide {
         scroll-snap-align: center;
         flex: 0 0 var(--slide-width);
       }
-      .carousel > img:first-child {
+      .carousel > .slide:first-child {
         margin-left: var(--slide-margin);
       }
-      .carousel > img:last-child {
+      .carousel > .slide:last-child {
         margin-right: var(--slide-margin);
+      }
+      .slide > img {
+        display: block;
+        width: 100%;
+        height: auto;
       }
     </style>
   </head>
@@ -40,10 +45,18 @@
       >
     </p>
     <div class="carousel">
-      <img src="./carousel-1.png" alt="Page 1" />
-      <img src="./carousel-2.png" alt="Page 2" />
-      <img src="./carousel-3.png" alt="Page 3" />
-      <img src="./carousel-4.png" alt="Page 3" />
+      <div class="slide">
+        <img src="./carousel-1.png" alt="Page 1" />
+      </div>
+      <div class="slide">
+        <img src="./carousel-2.png" alt="Page 2" />
+      </div>
+      <div class="slide">
+        <img src="./carousel-3.png" alt="Page 3" />
+      </div>
+      <div class="slide">
+        <img src="./carousel-4.png" alt="Page 4" />
+      </div>
     </div>
   </body>
 </html>
