--- a/pdf-slide-viewer/index.html
+++ b/pdf-slide-viewer/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PDF Slide Viewer Demos</title>
+    <link rel="stylesheet" href="./base.css" />
   </head>
   <body>
     <h1>PDF Slide Viewer Demos</h1>
