--- a/pdf-slide-viewer/position-absolute-image-map/index.html
+++ b/pdf-slide-viewer/position-absolute-image-map/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Document</title>
+    <link rel="stylesheet" href="../base.css" />
     <style>
       .slide {
         width: min(100%, 400px);
