--- a/pdf-slide-viewer/scroll-snap/index.html
+++ b/pdf-slide-viewer/scroll-snap/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Scroll Snap Demo</title>
+    <link rel="stylesheet" href="../base.css" />
     <style>
       :root {
         --slide-width: 80%;
