--- a/pdf-slide-viewer/position-absolute-image-map/index.html
+++ b/pdf-slide-viewer/position-absolute-image-map/index.html
@@ -6,8 +6,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="../base.css" />
     <style>
-      .slide {
+      .resize {
+        resize: both;
+        overflow: hidden;
         width: min(100%, 400px);
+        text-align: right;
+      }
+      .slide {
+        width: calc(100% - 2px);
         position: relative;
         border: 1px solid gray;
       }
@@ -33,28 +39,31 @@
         >Source</a
       >
     </p>
-    <div class="slide">
-      <img
-        src="../slide-carousel/slide-2.jpg"
-        alt="Slide 2 •Hyperlink: http://example.com/ •Another hyperlink: click here <- Link on a image"
-        width="960"
-        height="540"
-      />
-      <a
-        href="http://example.com/"
-        title="http://example.com/"
-        style="top: 28.2%; left: 29.19%; bottom: 64.9%; right: 34.46%"
-      ></a>
-      <a
-        href="http://example.com/"
-        title="http://example.com/"
-        style="top: 38.14%; left: 44.26%; bottom: 55.44%; right: 38.16%"
-      ></a>
-      <a
-        href="http://example.com/"
-        title="http://example.com/"
-        style="top: 60.55%; left: 9.01%; bottom: 16.12%; right: 77.87%"
-      ></a>
+    <div class="resize">
+      <div class="slide">
+        <img
+          src="../slide-carousel/slide-2.jpg"
+          alt="Slide 2 •Hyperlink: http://example.com/ •Another hyperlink: click here <- Link on a image"
+          width="960"
+          height="540"
+        />
+        <a
+          href="http://example.com/"
+          title="http://example.com/"
+          style="top: 28.2%; left: 29.19%; bottom: 64.9%; right: 34.46%"
+        ></a>
+        <a
+          href="http://example.com/"
+          title="http://example.com/"
+          style="top: 38.14%; left: 44.26%; bottom: 55.44%; right: 38.16%"
+        ></a>
+        <a
+          href="http://example.com/"
+          title="http://example.com/"
+          style="top: 60.55%; left: 9.01%; bottom: 16.12%; right: 77.87%"
+        ></a>
+      </div>
+      Resize me ->&emsp;&emsp;
     </div>
     <h2>Metadata for this slide</h2>
     <pre><code>{
